# playground

autotools/basic/: Makefile.am  autogen.sh  configure.ac
autotools/basic/src/: Makefile.am  main.c
gegl/example-basic/: aclocal.m4  configure.ac
gegl/example-basic/src/: Makefile.am  main.vala
gegl/example-basic/vapi/: Makefile.am
gegl/example-viewport/: Makefile.am  configure.ac
gegl/example-viewport/operations/: Makefile.am  clutter-image.c  cogl-texture-2d.c  cogl-texture.c
gegl/example-viewport/src/: Makefile.am  clutter-gegl-actor.vala  clutter-gegl-content.vala  gegl-content.vala  gegl-image.vala  internal.c  internal.h  internal.vapi  main.vala  pan-action.vala  scroll-actor.vala  stack-layout.vala  viewport.vala  window.vala
gegl/example-viewport/vapi/: Gegl-0.3.metadata  Makefile.am
gom/example/: Makefile.am  configure.ac
gom/example/data/: Makefile.am  example.gresource.xml
gom/example/data/resources/database/: migration-1.sql
gom/example/src/: Makefile.am  main.vala
gom/example/vapi/: Gom-1.0.metadata  Makefile.am
