#BUILT_SOURCES = \
#    gom-1.0.vapi
#
#EXTRA_DIST = \
#    gom-1.0.vapi \
#    Gio-2.0.metadata \
#    Gom-1.0.metadata
#
#CLEANFILES = \
#    $(BUILT_SOURCES)
#
#gom-1.0.vapi: $(INTROSPECTION_GIRDIR)/Gom-1.0.gir Gom-1.0.metadata Gio-2.0.metadata
#	$(VAPIGEN) --library gom-1.0 --metadatadir=$(srcdir) --pkg sqlite3 $<

EXTRA_DIST = \
    gom-1.0.vapi
